# xfstk-code

./: CMakeLists.txt  README.txt  contributors.txt  package-xfstk-downloader-linux.sh  xfstk-config.pri  xfstk.pro
ancillary/cmake_modules/: BuildSDK.cmake  CheckCXX11Features.cmake  CheckCXX11SharedPtr.cmake  FindCCache.cmake  FindUSB01.cmake  FindUSB1.cmake  GenerateDocumentation.cmake  buildPackages.cmake  cpack_options.cmake.in
ancillary/configure/api/downloader-api/: CMakeLists.txt
ancillary/configure/core/command-line-helper/: CMakeLists.txt
ancillary/configure/core/downloader-solo/: CMakeLists.txt
ancillary/configure/core/emmc-dump/: CMakeLists.txt
ancillary/configure/core/factory/: CMakeLists.txt
ancillary/configure/gui/downloader-ui/: CMakeLists.txt
ancillary/configure/plugins/downloader/baytrail/: CMakeLists.txt
ancillary/configure/plugins/downloader/cloverview/: CMakeLists.txt
ancillary/configure/plugins/downloader/cloverviewplus/: CMakeLists.txt
ancillary/configure/plugins/downloader/medfield/: CMakeLists.txt
ancillary/configure/plugins/downloader/merrifield/: CMakeLists.txt
ancillary/configure/plugins/downloader/template/: CMakeLists.txt
ancillary/doxygen/: xfstk-downloader-doxyfile.config
ancillary/doxygen/images/: Thumbs.db
ancillary/doxygen/source/: _SDK.dox  _footer.html
external-dependencies/: README.txt  external-dependencies.pro
xfstk-docs/doxygen/: xfstk-downloader-doxyfile.config
xfstk-projects/: xfstk-projects.pro
xfstk-projects/api/: api.pro
xfstk-projects/api/downloader-api/: downloader-api.pro  xfstk-dldr-api.vcproj
xfstk-projects/core/: core.pro
xfstk-projects/core/command-line-helper/: command-line-helper.pro
xfstk-projects/core/downloader-solo/: downloader-solo.pro
xfstk-projects/core/emmc-dump/: emmc-dump.pro
xfstk-projects/core/factory/: factory.pro
xfstk-projects/gui/: gui.pro
xfstk-projects/gui/downloader-ui/: downloader-ui.pro  object_script.xfstk-dldr-gui.Release
xfstk-projects/plugins/: plugins.pro
xfstk-projects/plugins/downloader/: downloader.pro
xfstk-projects/plugins/downloader/baytrail/: baytrail.pro
xfstk-projects/plugins/downloader/cloverview/: cloverview.pro
xfstk-projects/plugins/downloader/cloverviewplus/: cloverviewplus.pro
xfstk-projects/plugins/downloader/medfield/: medfield.pro
xfstk-projects/plugins/downloader/merrifield/: merrifield.pro
xfstk-projects/plugins/downloader/template/: template.pro
xfstk-sources/: README.txt
xfstk-sources/api/SDK/xfstk-dldr-example-parallel/: xfstk-dldr-api-test.pro  xfstk-dldr-example-parallel.cpp  xfstk-dldr-example-parallel.h
xfstk-sources/api/SDK/xfstk-dldr-example-parallel-dynamic-load/: xfstk-dldr-api-test.pro  xfstk-dldr-example-parallel.cpp  xfstk-dldr-example-parallel.h
xfstk-sources/api/SDK/xfstk-dldr-example-parallel-stress-test/: xfstk-dldr-api-test.pro  xfstk-dldr-example-parallel.cpp
xfstk-sources/api/SDK/xfstk-dldr-example-serial/: xfstk-dldr-api-test.pro  xfstk-dldr-example-serial.cpp
xfstk-sources/api/downloader-api/: xfstk-dldr-api_global.h  xfstkbareclass.h  xfstkdldrapi.cpp  xfstkdldrapi.h  xfstkdldrfactory.cpp  xfstkdldrfactory.h  xfstkdldrthread.cpp  xfstkdldrthread.h
xfstk-sources/core/command-line-helper/: downloaderoptions.cpp  downloaderoptions.h  ioption.h
xfstk-sources/core/downloader-solo/: xfstkdownloader.cpp  xfstkdownloader.h  xfstkdownloadermain.cpp
xfstk-sources/core/emmc-dump/: emmcdump.cpp  emmcdump.h  emmcdumpmain.cpp
xfstk-sources/core/factory/: xfstkfactory.cpp  xfstkfactory.h
xfstk-sources/core/factory/common/: scoped_file.h  xfstkcommon.h  xfstktypes.h
xfstk-sources/core/factory/interfaces/: idevice.h  idevicefactory.h  idownloader.h  ifactory.h  ioptions.h  ivisitor.h
xfstk-sources/gui/downloader-ui/: main.cpp  xfstk.rc  xfstkaboutdialog.cpp  xfstkaboutdialog.h  xfstkaboutdialog.ui  xfstkdldrgui.cpp  xfstkdldrgui.h  xfstkdldrgui.ui  xfstkdldrpluginabstractor.cpp  xfstkdldrpluginabstractor.h  xfstkresources.qrc  xfstksettingsdialog.cpp  xfstksettingsdialog.h  xfstksettingsdialog.ui
xfstk-sources/installer/linux/xfstk-downloader-0.0.0/debian/: README.Debian  README.source  changelog  control.all  control.i386  copyright  install  postinst  preinst  xfstk-downloader.doc-base  xfstk-downloader.docs  xfstk-downloader.substvars
xfstk-sources/plugins/downloader/: XfstkDldrPluginInterface.h
xfstk-sources/plugins/downloader/baytrail/: xfstkdldrpluginbaytrail.cpp  xfstkdldrpluginbaytrail.h  xfstkdldrpluginoptionsinterface.cpp  xfstkdldrpluginoptionsinterface.h  xfstkdldrpluginoptionsinterface.ui  xfstkdldrpluginuserinterface.cpp  xfstkdldrpluginuserinterface.h  xfstkdldrpluginuserinterface.ui  xfstkdldrthread.cpp  xfstkdldrthread.h
xfstk-sources/plugins/downloader/cloverview/: xfstkdldrplugincloverview.cpp  xfstkdldrplugincloverview.h  xfstkdldrpluginoptionsinterface.cpp  xfstkdldrpluginoptionsinterface.h  xfstkdldrpluginuserinterface.cpp  xfstkdldrpluginuserinterface.h  xfstkdldrthread.cpp  xfstkdldrthread.h
xfstk-sources/plugins/downloader/cloverviewplus/: xfstkdldrplugincloverviewplus.cpp  xfstkdldrplugincloverviewplus.h  xfstkdldrpluginoptionsinterface.cpp  xfstkdldrpluginoptionsinterface.h  xfstkdldrpluginuserinterface.cpp  xfstkdldrpluginuserinterface.h  xfstkdldrpluginuserinterface.ui  xfstkdldrthread.cpp  xfstkdldrthread.h
xfstk-sources/plugins/downloader/medfield/: xfstkdldrpluginmedfield.cpp  xfstkdldrpluginmedfield.h  xfstkdldrpluginoptionsinterface.cpp  xfstkdldrpluginoptionsinterface.h  xfstkdldrpluginuserinterface.cpp  xfstkdldrpluginuserinterface.h  xfstkdldrthread.cpp
xfstk-sources/plugins/downloader/merrifield/: xfstkdldrpluginmerrifield.cpp  xfstkdldrpluginmerrifield.h  xfstkdldrpluginoptionsinterface.cpp  xfstkdldrpluginuserinterface.cpp  xfstkdldrpluginuserinterface.h  xfstkdldrthread.cpp  xfstkdldrthread.h
xfstk-sources/plugins/downloader/template/: xfstkdldrpluginoptionsinterface.cpp  xfstkdldrpluginoptionsinterface.h  xfstkdldrplugintemplate.cpp  xfstkdldrplugintemplate.h  xfstkdldrpluginuserinterface.cpp  xfstkdldrpluginuserinterface.h
(+17 files in other folders)
